# cpsumon

./: .gitignore  CMakeLists.txt  README  README.md  compile.sh  cpsumon.c  cpsumoncli.c
cp210x/: CP210x_VCP_Linux_3.x.x_Release_Notes.txt  cp210x.c
include/: cpsumoncli.h
libcpsumon/: CMakeLists.txt
libcpsumon/include/: cpsumon.h
libcpsumon/src/: cpsumon.c
pycpsumon/: pycpsumon_repl
